--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,10 +12,14 @@ on:
 jobs:
   test:
     name: run unit tests
-    runs-on: node:12.16.3-stretch
-    
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
     - name: npm install
       run: npm install
     - name: npm test
